[package]
name = "haversiner"
version = "0.2.0"
authors = ["andrewgy8 <andrewgy8@gmail.com>"]
edition = "2018"
description = "Find the Haversine distance between any two points."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "haversiner"
path = "src/lib.rs"

[[bin]]
name = "haversinercalc"
path = "src/main.rs"

[dependencies]
